force-app/main/default/objects/Business_Operations__c/Business_Operations__c.object-meta.xml
<CustomObject>
    <description>Master Detail to the Competitor object. Object created to support business operations information relative to IM competitors for the DB&amp;R project.</description>
    <label>Business Operations</label>
    <nameField>
        <label>Business Operations Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>