force-app/main/default/objects/Business_Operations__c/fields/BD_Partner_Development_Summary__c.field-meta.xml
<CustomField>
    <fullName>BD_Partner_Development_Summary__c</fullName>
    <label>BD/Partner Development Summary</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>