force-app/main/default/objects/Business_Operations__c/fields/Business_Operations_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Operations_Summary__c</fullName>
    <label>Business Operations Summary</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>