force-app/main/default/objects/Business_Operations__c/fields/Chain_of_Custody_Description__c.field-meta.xml
<CustomField>
    <fullName>Chain_of_Custody_Description__c</fullName>
    <label>Chain of Custody Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>