force-app/main/default/objects/Business_Operations__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Business Operations</relationshipLabel>
    <relationshipName>Business_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>