force-app/main/default/objects/Business_Operations__c/fields/Competitor_Customers_Now_w_IM__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Customers_Now_w_IM__c</fullName>
    <label>Competitor Customers Now w/IM</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>