force-app/main/default/objects/Business_Operations__c/fields/Data_Center_Locations__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Locations__c</fullName>
    <label>Data Center Locations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>