force-app/main/default/objects/Business_Operations__c/fields/FACTA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>FACTA_Compliant__c</fullName>
    <label>FACTA Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>