force-app/main/default/objects/Business_Operations__c/fields/Headquarter_Location__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Location__c</fullName>
    <label>Headquarter Location</label>
    <type>TextArea</type>
</CustomField>