force-app/main/default/objects/Business_Operations__c/fields/IM_Staff_Formerly_with_Competitor__c.field-meta.xml
<CustomField>
    <fullName>IM_Staff_Formerly_with_Competitor__c</fullName>
    <label>IM Staff Formerly with Competitor</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>