force-app/main/default/objects/Business_Operations__c/fields/Intl_Office_Locations__c.field-meta.xml
<CustomField>
    <fullName>Intl_Office_Locations__c</fullName>
    <label>Intl. Office Locations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>