force-app/main/default/objects/Business_Operations__c/fields/Legal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Legal_Summary__c</fullName>
    <label>Legal Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>