force-app/main/default/objects/Business_Operations__c/fields/Map_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Map_Headquarters__c</fullName>
    <label>Map Headquarters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>