force-app/main/default/objects/Business_Operations__c/fields/Map_Misc_Locations__c.field-meta.xml
<CustomField>
    <fullName>Map_Misc_Locations__c</fullName>
    <label>Map Misc Locations</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>