force-app/main/default/objects/Business_Operations__c/fields/Marquee_Customers__c.field-meta.xml
<CustomField>
    <fullName>Marquee_Customers__c</fullName>
    <label>Marquee Customers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>