force-app/main/default/objects/Business_Operations__c/fields/No_Data_Centers__c.field-meta.xml
<CustomField>
    <fullName>No_Data_Centers__c</fullName>
    <label>No. Data Centers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>