force-app/main/default/objects/Business_Operations__c/fields/No_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Employees__c</fullName>
    <label>No. Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>