force-app/main/default/objects/Business_Operations__c/fields/No_US_Office_Locations__c.field-meta.xml
<CustomField>
    <fullName>No_US_Office_Locations__c</fullName>
    <label>No. US Office Locations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>