force-app/main/default/objects/Business_Operations__c/fields/Patents_Pending__c.field-meta.xml
<CustomField>
    <fullName>Patents_Pending__c</fullName>
    <label>Patents Pending</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>