force-app/main/default/objects/Business_Operations__c/fields/Personnel_Summary__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Summary__c</fullName>
    <label>Personnel Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>