force-app/main/default/objects/Business_Operations__c/fields/Sales_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strategy__c</fullName>
    <label>Sales Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>