force-app/main/default/objects/Business_Operations__c/fields/Sales_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sales_Summary__c</fullName>
    <label>Sales Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>