force-app/main/default/objects/Business_Operations__c/fields/Sales_Territories__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territories__c</fullName>
    <label>Sales Territories</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>