force-app/main/default/objects/Business_Operations__c/fields/Storage_Locations__c.field-meta.xml
<CustomField>
    <fullName>Storage_Locations__c</fullName>
    <label>Storage Locations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>