force-app/main/default/objects/Business_Operations__c/fields/X24_7_Operations__c.field-meta.xml
<CustomField>
    <fullName>X24_7_Operations__c</fullName>
    <label>24/7 Operations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>